--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,4 +1,5 @@
-deploy.ant.properties.file=C:\\Users\\lucas.scampos4\\AppData\\Roaming\\NetBeans\\14\\tomcat90.properties
-j2ee.server.home=C:/Users/lucas.scampos4/Downloads/apache-tomcat-10.0.27-windows-x64/apache-tomcat-10.0.27
-j2ee.server.instance=tomcat90:home=C:\\Users\\lucas.scampos4\\Downloads\\apache-tomcat-10.0.27-windows-x64\\apache-tomcat-10.0.27
+deploy.ant.properties.file=C:\\Users\\lucas.scampos4\\AppData\\Roaming\\NetBeans\\14\\tomcat80.properties
+j2ee.server.home=C:/Users/lucas.scampos4/Downloads/apache-tomcat-8.5.86-windows-x64/apache-tomcat-8.5.86
+j2ee.server.instance=tomcat80:home=C:\\Users\\lucas.scampos4\\Downloads\\apache-tomcat-8.5.86-windows-x64\\apache-tomcat-8.5.86
+selected.browser=Chrome
 user.properties.file=C:\\Users\\lucas.scampos4\\AppData\\Roaming\\NetBeans\\14\\build.properties
