--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,5 +1,6 @@
 deploy.ant.properties.file=C:\\Users\\lucas.scampos4\\AppData\\Roaming\\NetBeans\\14\\tomcat80.properties
-j2ee.server.home=C:/Users/lucas.scampos4/Downloads/apache-tomcat-8.5.86-windows-x64/apache-tomcat-8.5.86
-j2ee.server.instance=tomcat80:home=C:\\Users\\lucas.scampos4\\Downloads\\apache-tomcat-8.5.86-windows-x64\\apache-tomcat-8.5.86
+file.reference.mysql-connector-j-8.0.32.jar=C:\\Users\\lucas.scampos4\\Desktop\\aulas_de_arquitetura_de_software\\mysql-connector-j-8.0.32\\mysql-connector-j-8.0.32.jar
+j2ee.server.home=C:/Users/lucas.scampos4/Desktop/apache-tomcat-8.5.86
+j2ee.server.instance=tomcat80:home=C:\\Users\\lucas.scampos4\\Desktop\\apache-tomcat-8.5.86
 selected.browser=Chrome
 user.properties.file=C:\\Users\\lucas.scampos4\\AppData\\Roaming\\NetBeans\\14\\build.properties
